# P2P-Chat

./: .gitignore  CMakeLists.txt  README.md  client.c  client.h  msg_encryption.c  msg_encryption.h  msg_parser.h  server.c  server.h
include/: MySocket.h  menu.h  utils.h
src/: CLI_client.c  MsgEncrypt.c  client.c  menu.c  server.c  utils.c
tests/: test_client.c  test_menu.c  test_server.c
